update index file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <section class="card-section">
       <ul class="cards">
+        <h1>hey richard was here</h1>
         <button class="btn" type="button">Shuffle</button>
         <li class="card card-1">
           quote 1
